# focuswm

./: .gitignore  Cargo.toml  README.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
crates/focuswm/: Cargo.toml  build.rs  config.rs  github.rs  gl_bridge.rs  main.rs  notify.rs  persist.rs  tray.rs
crates/focuswm-render/: Cargo.toml  lib.rs
crates/focuswm-render/src/: lib.rs
crates/focuswm-shell/: Cargo.toml  lib.rs  model.rs  task.rs
crates/focuswm-shell/src/: lib.rs  task.rs
crates/focuswm-wayland/: Cargo.toml  handlers.rs  input.rs  lib.rs  state.rs  xwayland.rs
crates/focuswm-wayland/src/: handlers.rs  input.rs  lib.rs  state.rs
crates/focuswm/examples/: shell_screenshot.rs
crates/focuswm/src/: config.rs  gl_bridge.rs  main.rs  tray.rs
crates/focuswm/tests/: ui_desktop0.rs  ui_escape.rs  ui_github_search.rs  ui_interaction.rs  ui_launcher.rs  ui_lock.rs  ui_report_navigation.rs  ui_settings.rs  ui_sidebar_windows.rs  ui_task_settings.rs  ui_window_titlebar.rs  ui_wizard_create.rs  ui_wizard_validation.rs
crates/focuswm/ui/: globals.slint  launcher.slint  lock.slint  main.slint  report.slint  settings.slint  sidebar.slint  task_settings.slint  theme.slint  types.slint  window_menu.slint  wizard.slint
docs/: COMPOSITOR_STATUS.md
scripts/: install-build-deps.sh
