[workspace]
resolver = "2"
members = [
    "crates/focuswm",
    "crates/focuswm-wayland",
    "crates/focuswm-render",
    "crates/focuswm-shell",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/ogoffart/focuswm"

[workspace.dependencies]
focuswm-wayland = { path = "crates/focuswm-wayland" }
focuswm-render = { path = "crates/focuswm-render" }
focuswm-shell = { path = "crates/focuswm-shell" }

# Slint 1.17 from the master branch (per project requirement). The compositor
# shares GL textures with the renderer, so an OpenGL renderer is required;
# `renderer-software` additionally enables headless screenshot tests.
slint = { git = "https://github.com/slint-ui/slint.git", branch = "master", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-femtovg",
    "renderer-software",
    "backend-winit",
] }
slint-build = { git = "https://github.com/slint-ui/slint.git", branch = "master" }

# Smithay is used purely as the Wayland-protocol engine — no rendering — so only
# the frontend + desktop helpers are needed.
smithay = { version = "0.7", default-features = false, features = [
    "wayland_frontend",
    "desktop",
    "renderer_gl",
    "backend_egl",
    "xwayland",
] }

calloop = "0.14"
glow = "0.17"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
