[package]
name = "focuswm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "focuswm"

[[bin]]
name = "focuswm"
path = "src/main.rs"

[dependencies]
focuswm-wayland.workspace = true
focuswm-shell.workspace = true
focuswm-render.workspace = true
slint.workspace = true
glow.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
image.workspace = true
