[package]
name = "focuswm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "focuswm"

[[bin]]
name = "focuswm"
path = "main.rs"

[dependencies]
focuswm-wayland.workspace = true
focuswm-shell.workspace = true
focuswm-render.workspace = true
slint.workspace = true
glow.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
zbus = "5"
async-channel = "2"
system-tray = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
image.workspace = true
# Slint testing backend for headless UI interaction tests (same git rev as slint).
i-slint-backend-testing = { git = "https://github.com/slint-ui/slint.git", branch = "master" }
i-slint-core = { git = "https://github.com/slint-ui/slint.git", branch = "master" }
